--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
-    <title>meteor-todo</title>
+    <title>Todo List</title>
 </head>
 
 <body>
-<div id="react-target"></div>
+<div id="render-target"></div>
 </body>
